package abstractfactory.bombed;


import basic.Room;

public class RoomWithABomb  extends Room {

    public RoomWithABomb(int roomNo) {
        super(roomNo);
    }
}

