package abstractfactory.enchanted;

import basic.Room;

public class EnchantedRoom extends Room {
    public EnchantedRoom(int roomNo) {
        super(roomNo);
    }
}
