package factorymethod;

import basic.Door;
import basic.Room;

public class DoorNeedingSpell extends Door{
    public DoorNeedingSpell(Room r1, Room r2) {
        super(r1, r2);
    }
}
